--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -9,7 +9,7 @@
         <div class="d-flex justify-content-center">
           <div class="row mx-auto">
             <h1 class="mb-4"><%=pageTitle %></h1>
-            <h5 class="mb-4 text-info"><%=activeMonth %> <%=activeYear %></h5>
+            <h5 class="mt-2 mb-5 text-info"><%=activeMonth %> <%=activeYear %></h5>
 
 
     <div class="bg-light container border border-light rounded">
