--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,9 +1,14 @@
-<header class="header">
+<header class="header mb-5">
   <nav
     class="py-4 navbar navbar-expand-lg navbar-light bg-light navbar-style ms-auto"
   >
     <div class="container-fluid">
-      <a class="navbar-brand ml-2" href="#">Worthie</a>
+      <div
+        class="h1 mt-2 ml-2 pl-3 pr-3 pt-1 pb-1 bg-success text-light rounded border border-light"
+        href="#"
+      >
+        Worthie
+      </div>
       <button
         class="navbar-toggler"
         type="button"
@@ -17,7 +22,7 @@
       </button>
       <div class="collapse navbar-collapse mt-4" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto text-right">
-          <a class="nav-link" href="/worthie/"
+          <a class="nav-link" href="/worthie"
             ><button
               class="btn btn-outline-warning btn-lg me-2 <%= path === '/yearmonth' ? 'active' : '' %>"
               type="button"
