--- a/views/yearmonth.ejs
+++ b/views/yearmonth.ejs
@@ -4,12 +4,12 @@
 
 <%- include('includes/navigation.ejs') %>
 
-<body>
+<body class="">
     <div class="container">
         <div class="d-flex justify-content-center">
           <div class="row mx-auto">
 
-    <%- include('includes/yearMonth.ejs') %>
+    <%- include('includes/yearmonth.ejs') %>
 
 
 </body>
