--- a/views/expenses.ejs
+++ b/views/expenses.ejs
@@ -17,7 +17,7 @@
             <!-- Expense Transaction Input -->
             <div class="mt-3 container text-center">
                 <div class="row mx-auto">
-                  <div class="col expenseTransaction">
+                  <div class="col">
 
             <form class="bg-light rounded row gx-3 gy-2 pb-4 mb-4" action="/worthie/expenses" method="POST">
 
