--- a/views/includes/yearmonth.ejs
+++ b/views/includes/yearmonth.ejs
@@ -1,8 +1,10 @@
     
     <div class="container">
+      <div class="row mx-auto text-center"><h5 class="mt-2 mb-4 text-info">Current Year: <%=activeYear %> || Current Month: <%=activeMonth %> </h5></div>
       <div class="row mx-auto">
         <h1 class=" mb-5">Select Year & Month Period</h1><br><br>
         </div>
+
       <div class="d-flex justify-content-center">
 
           <div class="row mx-auto">
